# temere-old

./: .env  Cargo.toml  Dockerfile  README.md  save
docs/: arch.dio  pt-BR.md  websocket.json
migrations/2021-08-01-150318_create_lobbys/: down.sql  up.sql
migrations/2021-09-01-035353_create_users/: up.sql
migrations/2021-09-01-040244_create_blocks/: up.sql
migrations/2021-09-01-041237_create_chats/: down.sql  up.sql
migrations/2021-09-04-034756_create_sessions/: up.sql
migrations/2021-09-04-161518_create_history/: up.sql
migrations/2021-09-04-161518_create_records/: up.sql
src/: lib.rs  main.rs  schema.rs
src/app/: client.rs  mod.rs
src/app/client/: mod.rs
src/app/routes/: lobby.rs  mod.rs
src/app/server/: chat.rs  lobby.rs  mod.rs
src/app/server/chat/: mod.rs
src/app/server/lobby/: mod.rs  session.rs
src/database/: chat.rs  lobby.rs  mod.rs  session.rs
src/models/: blocks.rs  chat.rs  chats.rs  lobby.rs  mod.rs  session.rs  users.rs
src/routes/: lobby.rs  mod.rs
