[package]
name = "kubers"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web-actors = "3.0.0"
actix = "0.10.0"
actix-web = "3.3.2"
uuid = { version = "0.8.2", features = ["v4", "serde"] }
serde = "1.0.126"
serde_json = "1.0.64"
env_logger = "0.9.0"
log = "0.4.14"
actix-files = "0.5.0"
dotenv = "0.15.0"
diesel = { version = "1.4.7", features = [
    "chrono",
    "postgres",
    "r2d2",
    "uuidv07",
    "serde_json",
] }
num_cpus = "1.13.0"
chrono = "0.4.19"
actix-rt = "2.2.0"
actix-cors = "0.5.4"
